@@ -18,8 +18,6 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
-# FIXME: failure called in subshells - check/fix error propagation.
-
 # Global prometheus functions.
 source "%LIBPROMETHEUS%" || exit 1
 
@@ -69,7 +67,7 @@ function remove_found {
 		echo "$file" && continue
 
 		# $file not present & cannot be downloaded.
-		failure "$file not found and cannot be downloaded"
+		warning "$file not found and cannot be downloaded"
 	done
 }
 
